Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -471,6 +471,33 @@
     */
     const newsData = [
   {
+    "title": "Cụ ông 78 tuổi vào nhà nghỉ 'tâm sự', bị người phụ nữ giật mất chiếc nhẫn vàng",
+    "content": "Công an tỉnh Bình Dương đã tạm giữ bà T.T.X., 47 tuổi, vì hành vi giật nhẫn vàng của cụ ông 78 tuổi, ông P.M.Q., khi cả hai gặp nhau tại nhà nghỉ để 'tâm sự'. Bà X. thừa nhận đã chiếm đoạt chiếc nhẫn vàng của ông Q. để bán lấy tiền tiêu xài. Vụ việc đang được điều tra thêm bởi Công an Bình Dương.",
+    "link": "https://tuoitre.vn/cu-ong-78-tuoi-vao-nha-nghi-tam-su-bi-nguoi-phu-nu-giat-mat-chiec-nhan-vang-20250319165513656.htm",
+    "cat": "phap-luat",
+    "positivity": 2,
+    "importance": 5,
+    "question": "Tại sao bà T.T.X. bị công an tạm giữ?",
+    "answers": [
+      {
+        "text": "Vì giật nhẫn vàng của cụ ông 78 tuổi",
+        "correct": true
+      },
+      {
+        "text": "Vì bán đồ ăn ở nhà nghỉ",
+        "correct": false
+      },
+      {
+        "text": "Vì không có giấy tờ tùy thân",
+        "correct": false
+      },
+      {
+        "text": "Vì gây rối trật tự công cộng",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hình ảnh flycam 3.790 căn hộ tái định cư ở Thủ Thiêm sắp đấu giá làm nhà ở thương mại",
     "content": "Chủ tịch UBND TP.HCM đã chấp thuận việc đấu giá 3.790 căn hộ tái định cư tại khu đô thị mới Thủ Thiêm với mục tiêu chuyển đổi thành nhà ở thương mại. Các căn hộ này nằm gần đại lộ Mai Chí Thọ và đã trải qua nhiều lần đấu giá nhưng không thành công do giá khởi điểm cao và cơ sở hạ tầng xuống cấp. Việc này nhằm giải quyết tình trạng căn hộ bị bỏ hoang và tạo thêm nguồn cung nhà ở cho người dân thành phố.",
     "link": "https://tuoitre.vn/hinh-anh-flycam-3-790-can-ho-tai-dinh-cu-o-thu-thiem-sap-dau-gia-lam-nha-o-thuong-mai-20250319164027652.htm",
@@ -1805,33 +1832,6 @@
     ]
   },
   {
-    "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
-    "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
-    "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 6,
-    "question": "Đau lưng có phải là triệu chứng của bệnh thần kinh không?",
-    "answers": [
-      {
-        "text": "Có, đau lưng có thể là triệu chứng của bệnh thần kinh.",
-        "correct": true
-      },
-      {
-        "text": "Không, đau lưng chỉ do xương khớp.",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng không liên quan đến thần kinh.",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng chỉ là vấn đề tạm thời.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
     "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
     "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
@@ -1854,6 +1854,33 @@
       },
       {
         "text": "Để mở rộng thị trường sang châu Á.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
+    "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
+    "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 6,
+    "question": "Đau lưng có phải là triệu chứng của bệnh thần kinh không?",
+    "answers": [
+      {
+        "text": "Có, đau lưng có thể là triệu chứng của bệnh thần kinh.",
+        "correct": true
+      },
+      {
+        "text": "Không, đau lưng chỉ do xương khớp.",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng không liên quan đến thần kinh.",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng chỉ là vấn đề tạm thời.",
         "correct": false
       }
     ]
@@ -2686,6 +2713,33 @@
     ]
   },
   {
+    "title": "Cô gái mắc chứng 'xương hóa đá'",
+    "content": "Cô gái 28 tuổi ở Bắc Giang mắc bệnh xương hóa đá, một bệnh lý di truyền hiếm gặp, gây đau khớp và khó khăn trong vận động. Cô đã trải qua phẫu thuật thay khớp háng nhân tạo do tình trạng bệnh nghiêm trọng, khiến xương trở nên cứng nhưng lại rất giòn. Ca phẫu thuật kéo dài 5 giờ đã thành công, giúp cô thoát khỏi cơn đau và có thể đi lại bình thường.",
+    "link": "https://vnexpress.net/co-gai-mac-chung-xuong-hoa-da-4863071.html",
+    "cat": "suc-khoe",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Bệnh xương hóa đá là gì và ảnh hưởng như thế nào đến bệnh nhân?",
+    "answers": [
+      {
+        "text": "Bệnh xương hóa đá là một rối loạn di truyền hiếm gặp, khiến xương trở nên cứng nhưng giòn.",
+        "correct": true
+      },
+      {
+        "text": "Bệnh xương hóa đá là một bệnh lây truyền qua đường hô hấp.",
+        "correct": false
+      },
+      {
+        "text": "Bệnh xương hóa đá là một bệnh về hệ tiêu hóa.",
+        "correct": false
+      },
+      {
+        "text": "Bệnh xương hóa đá là một chứng bệnh da liễu.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Trẻ rụng tóc do thiếu chất gì?",
     "content": "Trẻ bị rụng tóc có thể do thiếu hụt nhiều loại vitamin và khoáng chất thiết yếu như vitamin B, C, D, sắt, kẽm và selen trong chế độ dinh dưỡng hàng ngày. Thiếu dinh dưỡng có thể dẫn đến tình trạng tóc rụng nhiều hơn 100 sợi mỗi ngày, tóc yếu và dễ gãy. Bác sĩ Trần Thị Trà Phương đã nhấn mạnh tầm quan trọng của việc bổ sung các chất dinh dưỡng này để giúp tóc phát triển khỏe mạnh và ngăn ngừa rụng tóc ở trẻ em.",
     "link": "https://vnexpress.net/tre-rung-toc-do-thieu-chat-gi-4862999.html",
@@ -2712,33 +2766,6 @@
       },
       {
         "text": "Vitamin D và magie",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Cô gái mắc chứng 'xương hóa đá'",
-    "content": "Cô gái 28 tuổi ở Bắc Giang mắc bệnh xương hóa đá, một bệnh lý di truyền hiếm gặp, gây đau khớp và khó khăn trong vận động. Cô đã trải qua phẫu thuật thay khớp háng nhân tạo do tình trạng bệnh nghiêm trọng, khiến xương trở nên cứng nhưng lại rất giòn. Ca phẫu thuật kéo dài 5 giờ đã thành công, giúp cô thoát khỏi cơn đau và có thể đi lại bình thường.",
-    "link": "https://vnexpress.net/co-gai-mac-chung-xuong-hoa-da-4863071.html",
-    "cat": "suc-khoe",
-    "positivity": 7,
-    "importance": 8,
-    "question": "Bệnh xương hóa đá là gì và ảnh hưởng như thế nào đến bệnh nhân?",
-    "answers": [
-      {
-        "text": "Bệnh xương hóa đá là một rối loạn di truyền hiếm gặp, khiến xương trở nên cứng nhưng giòn.",
-        "correct": true
-      },
-      {
-        "text": "Bệnh xương hóa đá là một bệnh lây truyền qua đường hô hấp.",
-        "correct": false
-      },
-      {
-        "text": "Bệnh xương hóa đá là một bệnh về hệ tiêu hóa.",
-        "correct": false
-      },
-      {
-        "text": "Bệnh xương hóa đá là một chứng bệnh da liễu.",
         "correct": false
       }
     ]
