Batch update of generated files

--- a/home_quizzes.html
+++ b/home_quizzes.html
@@ -498,6 +498,33 @@
     ]
   },
   {
+    "title": "Tôm kho tàu kiểu miền Tây",
+    "content": "Tôm kho tàu kiểu miền Tây là món ăn nổi bật với tôm tươi màu đỏ au, vị ngọt chắc và đậm đà. Món này được chế biến từ tôm tươi, gạch tôm và nước dừa, tạo nên hương vị béo bùi hấp dẫn. Công thức bao gồm các bước chọn lựa, sơ chế tôm và ướp gia vị để tôm thấm đậm đà, sau đó kho với nước dừa để tăng thêm hương vị.",
+    "link": "https://vnexpress.net/doi-song-cooking-tom-kho-tau-kieu-mien-tay-4862728.html",
+    "cat": "gia-dinh",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Món tôm kho tàu kiểu miền Tây có đặc điểm gì nổi bật?",
+    "answers": [
+      {
+        "text": "Tôm có màu đỏ au và vị ngọt chắc",
+        "correct": true
+      },
+      {
+        "text": "Tôm có màu xanh và vị chua",
+        "correct": false
+      },
+      {
+        "text": "Tôm có vị đắng và màu xám",
+        "correct": false
+      },
+      {
+        "text": "Tôm không có gạch và vị nhạt",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hình ảnh flycam 3.790 căn hộ tái định cư ở Thủ Thiêm sắp đấu giá làm nhà ở thương mại",
     "content": "Chủ tịch UBND TP.HCM đã chấp thuận việc đấu giá 3.790 căn hộ tái định cư tại khu đô thị mới Thủ Thiêm với mục tiêu chuyển đổi thành nhà ở thương mại. Các căn hộ này nằm gần đại lộ Mai Chí Thọ và đã trải qua nhiều lần đấu giá nhưng không thành công do giá khởi điểm cao và cơ sở hạ tầng xuống cấp. Việc này nhằm giải quyết tình trạng căn hộ bị bỏ hoang và tạo thêm nguồn cung nhà ở cho người dân thành phố.",
     "link": "https://tuoitre.vn/hinh-anh-flycam-3-790-can-ho-tai-dinh-cu-o-thu-thiem-sap-dau-gia-lam-nha-o-thuong-mai-20250319164027652.htm",
