Batch update of generated files

--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Hậu vệ Jason Quang Vinh Pendant trở thành công dân Việt Nam",
+    "content": "Hậu vệ Jason Quang Vinh Pendant vừa trở thành công dân Việt Nam, theo thông báo từ CLB Công An Hà Nội. Sau khi nhận quốc tịch, anh khao khát được khoác áo đội tuyển quốc gia Việt Nam và đã có tên mới là Cao Pendant Quang Vinh. Trước đó, anh đã có những màn trình diễn ấn tượng tại V-League mùa này và có khả năng được gọi lên đội tuyển trong thời gian tới.",
+    "link": "https://vnexpress.net/hau-ve-jason-quang-vinh-pendant-tro-thanh-cong-dan-viet-nam-4863417.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Jason Quang Vinh đã trở thành công dân của nước nào?",
+    "answers": [
+      {
+        "text": "Việt Nam",
+        "correct": true
+      },
+      {
+        "text": "Pháp",
+        "correct": false
+      },
+      {
+        "text": "Mỹ",
+        "correct": false
+      },
+      {
+        "text": "Brazil",
+        "correct": false
+      },
+      {
+        "text": "Nhật Bản",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Chủ tịch Hà Nội bật 'làn xanh' cho loạt dự án, yêu cầu xử lý trong 24 giờ từ khi tiếp nhận hồ sơ",
     "content": "Vào ngày 19-3, Chủ tịch UBND TP Hà Nội Trần Sỹ Thanh đã ký văn bản chỉ đạo phân luồng và rút ngắn thời gian xử lý các hồ sơ thủ tục công việc nhằm đạt mục tiêu tăng trưởng GRDP trên 8% vào năm 2025. Theo đó, Hà Nội sẽ ưu tiên xử lý ngay các hồ sơ liên quan đến đầu tư, phát triển hạ tầng, xuất khẩu, và hỗ trợ tài chính trong vòng 24 giờ sau khi tiếp nhận. Việc này nhằm tạo điều kiện thuận lợi cho doanh nghiệp và thúc đẩy đầu tư, tiêu dùng, xuất khẩu, và đổi mới sáng tạo.",
     "link": "https://tuoitre.vn/chu-tich-ha-noi-bat-lan-xanh-cho-loat-du-an-yeu-cau-xu-ly-trong-24-gio-tu-khi-tiep-nhan-ho-so-2025031917514103.htm",
@@ -174,6 +205,37 @@
       },
       {
         "text": "2 tuần",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Đà Nẵng tái đề xuất xây hầm chui vượt sông Hàn",
+    "content": "Đà Nẵng đã tái đề xuất xây dựng hầm chui vượt sông Hàn dài 1,67 km, kết nối từ đường Đống Đa quận Hải Châu đến đường Vân Đồn quận Sơn Trà. Dự án này đã được đề xuất từ nhiều năm trước nhưng chưa được triển khai. Tổng mức đầu tư cho dự án là 6.880 tỷ đồng, trong đó chi phí xây dựng là 3.900 tỷ đồng. Sở Xây dựng Đà Nẵng cũng đang xem xét các phương án kết nối giao thông khác, bao gồm tuyến tàu điện ngầm.",
+    "link": "https://vnexpress.net/da-nang-tai-de-xuat-xay-ham-chui-vuot-song-han-4863404.html",
+    "cat": "thoi-su",
+    "positivity": 7,
+    "importance": 8,
+    "question": "Đà Nẵng đã đề xuất xây dựng công trình gì mới?",
+    "answers": [
+      {
+        "text": "Hầm chui vượt sông Hàn",
+        "correct": true
+      },
+      {
+        "text": "Cầu vượt sông Hàn",
+        "correct": false
+      },
+      {
+        "text": "Đường bộ mới",
+        "correct": false
+      },
+      {
+        "text": "Tuyến đường sắt",
+        "correct": false
+      },
+      {
+        "text": "Hệ thống metro mới",
         "correct": false
       }
     ]
@@ -1625,33 +1687,6 @@
     ]
   },
   {
-    "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
-    "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
-    "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
-    "cat": "kinh-doanh",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao Audi cắt giảm việc làm ở Đức?",
-    "answers": [
-      {
-        "text": "Do thách thức trong ngành công nghiệp ô tô và nhu cầu chậm lại đối với xe điện.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng cường sản xuất xe điện mới.",
-        "correct": false
-      },
-      {
-        "text": "Vì lý do tài chính cá nhân của nhân viên.",
-        "correct": false
-      },
-      {
-        "text": "Để mở rộng thị trường sang châu Á.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
     "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
     "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
@@ -1674,6 +1709,33 @@
       },
       {
         "text": "Đau lưng chỉ là vấn đề tạm thời.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
+    "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
+    "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
+    "cat": "kinh-doanh",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao Audi cắt giảm việc làm ở Đức?",
+    "answers": [
+      {
+        "text": "Do thách thức trong ngành công nghiệp ô tô và nhu cầu chậm lại đối với xe điện.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng cường sản xuất xe điện mới.",
+        "correct": false
+      },
+      {
+        "text": "Vì lý do tài chính cá nhân của nhân viên.",
+        "correct": false
+      },
+      {
+        "text": "Để mở rộng thị trường sang châu Á.",
         "correct": false
       }
     ]
@@ -2104,37 +2166,6 @@
     ]
   },
   {
-    "title": "Dấu hiệu nào ở tay, vai cảnh báo ung thư phổi?",
-    "content": "Ung thư phổi có thể gây ra các triệu chứng hô hấp như ho ra máu và khó thở. Ngoài ra, khi khối u đã lan rộng, nó có thể xuất hiện các dấu hiệu tại tay và vai, như là hiện tượng ngón tay và bả vai bị ảnh hưởng. Điều này cảnh báo người bệnh cần được kiểm tra kịp thời để phát hiện bệnh.",
-    "link": "https://vnexpress.net/dau-hieu-nao-o-tay-vai-canh-bao-ung-thu-phoi-4863116.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Những dấu hiệu nào ở tay và vai có thể cảnh báo ung thư phổi?",
-    "answers": [
-      {
-        "text": "Triệu chứng ngón tay, bả vai bị ảnh hưởng",
-        "correct": true
-      },
-      {
-        "text": "Đau đầu",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng",
-        "correct": false
-      },
-      {
-        "text": "Mệt mỏi",
-        "correct": false
-      },
-      {
-        "text": "Chóng mặt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "'Mẹ bỉm sữa' giảm 7 kg trong hai tháng",
     "content": "Chị Trang, 30 tuổi, đã giảm 7 kg trong hai tháng sau khi áp dụng chế độ ăn uống và tập luyện theo phác đồ của bác sĩ, thay vì nhịn ăn. Sau khi tăng 22 kg trong thời gian mang thai và gặp khó khăn trong việc giảm cân, chị đã tìm đến Trung tâm Kiểm soát cân nặng và được thiết kế một chế độ ăn đủ dinh dưỡng để đảm bảo chất lượng sữa cho con. Kết quả, chị không chỉ giảm cân mà còn cải thiện sức khỏe tổng thể.",
     "link": "https://vnexpress.net/me-bim-sua-giam-7-kg-trong-hai-thang-4863189.html",
@@ -2161,6 +2192,37 @@
       },
       {
         "text": "6 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dấu hiệu nào ở tay, vai cảnh báo ung thư phổi?",
+    "content": "Ung thư phổi có thể gây ra các triệu chứng hô hấp như ho ra máu và khó thở. Ngoài ra, khi khối u đã lan rộng, nó có thể xuất hiện các dấu hiệu tại tay và vai, như là hiện tượng ngón tay và bả vai bị ảnh hưởng. Điều này cảnh báo người bệnh cần được kiểm tra kịp thời để phát hiện bệnh.",
+    "link": "https://vnexpress.net/dau-hieu-nao-o-tay-vai-canh-bao-ung-thu-phoi-4863116.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Những dấu hiệu nào ở tay và vai có thể cảnh báo ung thư phổi?",
+    "answers": [
+      {
+        "text": "Triệu chứng ngón tay, bả vai bị ảnh hưởng",
+        "correct": true
+      },
+      {
+        "text": "Đau đầu",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng",
+        "correct": false
+      },
+      {
+        "text": "Mệt mỏi",
+        "correct": false
+      },
+      {
+        "text": "Chóng mặt",
         "correct": false
       }
     ]
@@ -3379,33 +3441,6 @@
     ]
   },
   {
-    "title": "NSƯT Bùi Như Lai \"Cha tôi, người ở lại\": Nhận mình lạnh lùng, sợ… nổi tiếng",
-    "content": "NSƯT Bùi Như Lai chia sẻ về cuộc sống và vai diễn trong bộ phim \"Cha tôi, người ở lại\", một tác phẩm Việt hóa từ phim Trung Quốc. Anh tự nhận mình là người lạnh lùng, không thích nổi tiếng và thường dành thời gian cho công việc quản lý tại Trường Đại học Sân khấu - Điện ảnh Hà Nội. Bùi Như Lai cũng nhấn mạnh tầm quan trọng của việc giữ gìn sự gần gũi với khán giả thông qua các vai diễn, mặc dù không muốn trở thành một ngôi sao giải trí. Anh đang hài lòng với cuộc sống bình dị cùng gia đình và công việc nghệ thuật.",
-    "link": "https://dantri.com.vn/giai-tri/nsut-bui-nhu-lai-cha-toi-nguoi-o-lai-nhan-minh-lanh-lung-so-noi-tieng-20250317220936197.htm",
-    "cat": "giai-tri",
-    "positivity": 7,
-    "importance": 6,
-    "question": "NSƯT Bùi Như Lai có những suy nghĩ gì về việc nổi tiếng?",
-    "answers": [
-      {
-        "text": "Anh không thích nổi tiếng và tự nhận mình lạnh lùng.",
-        "correct": true
-      },
-      {
-        "text": "Anh mong muốn trở thành một ngôi sao giải trí.",
-        "correct": false
-      },
-      {
-        "text": "Anh muốn tham gia nhiều phim truyền hình.",
-        "correct": false
-      },
-      {
-        "text": "Anh không quan tâm đến sự nổi tiếng trong ngành giải trí.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Bắc thang gần 4 m vào nhà tại công trường Vành đai 3 TP HCM",
     "content": "Nhiều hộ dân tại xa lộ Hà Nội, gần cầu vượt Tân Vạn, TP Dĩ An đang phải bắc thang cao gần 4 m để vào nhà do công trình Vành đai 3 TP HCM thi công, khiến mặt đường hạ thấp hơn so với nhà. Tình trạng này đã diễn ra từ cuối năm ngoái, gây khó khăn trong việc đi lại và buôn bán của người dân. Họ cho biết thu nhập giảm sút nghiêm trọng do công trường thi công, khiến khách hàng không còn ghé thăm như trước.",
     "link": "https://vnexpress.net/bac-thang-gan-4-m-vao-nha-tai-cong-truong-vanh-dai-3-tp-hcm-4862463.html",
@@ -3433,32 +3468,28 @@
     ]
   },
   {
-    "title": "Diên mạo ga T3 Tân Sơn Nhất trước thời điểm hoạt động",
-    "content": "Ga T3 Tân Sơn Nhất đang trong giai đoạn hoàn thiện cuối cùng trước khi chính thức đi vào hoạt động vào ngày 30/4 tới. Với tổng đầu tư 11.000 tỷ đồng, nhà ga sẽ phục vụ 20 triệu hành khách mỗi năm, nâng tổng công suất của sân bay lên 50 triệu. Công trình gồm 4 tầng nổi và 1 tầng hầm, với nhiều hạng mục đã hoàn thiện như mái lợp nhôm, kính và các hệ thống hạ tầng giao thông kết nối. Khi đưa vào hoạt động, ga T3 sẽ chịu trách nhiệm cho khoảng 80% lượng khách nội địa, giảm tải cho ga T1 đang quá tải.",
-    "link": "https://vnexpress.net/dien-mao-ga-t3-tan-son-nhat-truoc-thoi-diem-hoat-dong-4862970.html",
-    "cat": "thoi-su",
-    "positivity": 9,
+    "title": "Bị PT ép tập gym quá sức",
+    "content": "Bài viết kể về Tùng, một người tập gym bị huấn luyện viên cá nhân (PT) ép tập luyện quá sức. Sau hai tuần với cường độ cao, Tùng cảm thấy cơ thể kiệt sức và phải dừng tập do chấn thương và các triệu chứng suy nhược. Ngoài Tùng, một trường hợp khác là Thúy Mai cũng gặp tình trạng tương tự khi bị ép tập với cường độ cao dẫn đến chấn thương. Các bác sĩ khuyến cáo rằng việc tập luyện cần có sự cân bằng và không nên ép cơ thể làm việc quá mức, nhằm tránh chấn thương và ảnh hưởng đến sức khỏe.",
+    "link": "https://vnexpress.net/bi-pt-ep-tap-gym-qua-suc-4862236.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
     "importance": 8,
-    "question": "Khi nào ga T3 Tân Sơn Nhất sẽ chính thức hoạt động?",
+    "question": "Tại sao Tùng phải dừng tập gym?",
     "answers": [
       {
-        "text": "30/4/2025",
+        "text": "Vì bị ép tập quá sức dẫn đến kiệt sức và chấn thương.",
         "correct": true
       },
       {
-        "text": "1/5/2025",
+        "text": "Vì không thích tập gym nữa.",
         "correct": false
       },
       {
-        "text": "15/5/2025",
+        "text": "Vì không có thời gian tập.",
         "correct": false
       },
       {
-        "text": "1/6/2025",
-        "correct": false
-      },
-      {
-        "text": "30/3/2025",
+        "text": "Vì không có huấn luyện viên cá nhân.",
         "correct": false
       }
     ]
@@ -3495,6 +3526,64 @@
     ]
   },
   {
+    "title": "NSƯT Bùi Như Lai \"Cha tôi, người ở lại\": Nhận mình lạnh lùng, sợ… nổi tiếng",
+    "content": "NSƯT Bùi Như Lai chia sẻ về cuộc sống và vai diễn trong bộ phim \"Cha tôi, người ở lại\", một tác phẩm Việt hóa từ phim Trung Quốc. Anh tự nhận mình là người lạnh lùng, không thích nổi tiếng và thường dành thời gian cho công việc quản lý tại Trường Đại học Sân khấu - Điện ảnh Hà Nội. Bùi Như Lai cũng nhấn mạnh tầm quan trọng của việc giữ gìn sự gần gũi với khán giả thông qua các vai diễn, mặc dù không muốn trở thành một ngôi sao giải trí. Anh đang hài lòng với cuộc sống bình dị cùng gia đình và công việc nghệ thuật.",
+    "link": "https://dantri.com.vn/giai-tri/nsut-bui-nhu-lai-cha-toi-nguoi-o-lai-nhan-minh-lanh-lung-so-noi-tieng-20250317220936197.htm",
+    "cat": "giai-tri",
+    "positivity": 7,
+    "importance": 6,
+    "question": "NSƯT Bùi Như Lai có những suy nghĩ gì về việc nổi tiếng?",
+    "answers": [
+      {
+        "text": "Anh không thích nổi tiếng và tự nhận mình lạnh lùng.",
+        "correct": true
+      },
+      {
+        "text": "Anh mong muốn trở thành một ngôi sao giải trí.",
+        "correct": false
+      },
+      {
+        "text": "Anh muốn tham gia nhiều phim truyền hình.",
+        "correct": false
+      },
+      {
+        "text": "Anh không quan tâm đến sự nổi tiếng trong ngành giải trí.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Diên mạo ga T3 Tân Sơn Nhất trước thời điểm hoạt động",
+    "content": "Ga T3 Tân Sơn Nhất đang trong giai đoạn hoàn thiện cuối cùng trước khi chính thức đi vào hoạt động vào ngày 30/4 tới. Với tổng đầu tư 11.000 tỷ đồng, nhà ga sẽ phục vụ 20 triệu hành khách mỗi năm, nâng tổng công suất của sân bay lên 50 triệu. Công trình gồm 4 tầng nổi và 1 tầng hầm, với nhiều hạng mục đã hoàn thiện như mái lợp nhôm, kính và các hệ thống hạ tầng giao thông kết nối. Khi đưa vào hoạt động, ga T3 sẽ chịu trách nhiệm cho khoảng 80% lượng khách nội địa, giảm tải cho ga T1 đang quá tải.",
+    "link": "https://vnexpress.net/dien-mao-ga-t3-tan-son-nhat-truoc-thoi-diem-hoat-dong-4862970.html",
+    "cat": "thoi-su",
+    "positivity": 9,
+    "importance": 8,
+    "question": "Khi nào ga T3 Tân Sơn Nhất sẽ chính thức hoạt động?",
+    "answers": [
+      {
+        "text": "30/4/2025",
+        "correct": true
+      },
+      {
+        "text": "1/5/2025",
+        "correct": false
+      },
+      {
+        "text": "15/5/2025",
+        "correct": false
+      },
+      {
+        "text": "1/6/2025",
+        "correct": false
+      },
+      {
+        "text": "30/3/2025",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Phấn hoa - nỗi ám ảnh của người Việt ở nước ngoài",
     "content": "Bài viết đề cập đến nỗi ám ảnh của người Việt Nam sống ở nước ngoài, đặc biệt là tại Nhật Bản, do dị ứng phấn hoa. Nhiều người như Văn Phong và Hồng Hạnh phải bỏ công việc tốt để trở về quê hương vì không thể chịu đựng được triệu chứng dị ứng nặng nề trong mùa xuân. Dị ứng phấn hoa ảnh hưởng nghiêm trọng đến sức khỏe và chất lượng cuộc sống của họ, với tỷ lệ người mắc bệnh ngày càng gia tăng.",
     "link": "https://vnexpress.net/phan-hoa-noi-am-anh-cua-nguoi-viet-o-nuoc-ngoai-4861536.html",
@@ -3517,33 +3606,6 @@
       },
       {
         "text": "Mọi người đều thích mùa xuân và không lo lắng.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bị PT ép tập gym quá sức",
-    "content": "Bài viết kể về Tùng, một người tập gym bị huấn luyện viên cá nhân (PT) ép tập luyện quá sức. Sau hai tuần với cường độ cao, Tùng cảm thấy cơ thể kiệt sức và phải dừng tập do chấn thương và các triệu chứng suy nhược. Ngoài Tùng, một trường hợp khác là Thúy Mai cũng gặp tình trạng tương tự khi bị ép tập với cường độ cao dẫn đến chấn thương. Các bác sĩ khuyến cáo rằng việc tập luyện cần có sự cân bằng và không nên ép cơ thể làm việc quá mức, nhằm tránh chấn thương và ảnh hưởng đến sức khỏe.",
-    "link": "https://vnexpress.net/bi-pt-ep-tap-gym-qua-suc-4862236.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao Tùng phải dừng tập gym?",
-    "answers": [
-      {
-        "text": "Vì bị ép tập quá sức dẫn đến kiệt sức và chấn thương.",
-        "correct": true
-      },
-      {
-        "text": "Vì không thích tập gym nữa.",
-        "correct": false
-      },
-      {
-        "text": "Vì không có thời gian tập.",
-        "correct": false
-      },
-      {
-        "text": "Vì không có huấn luyện viên cá nhân.",
         "correct": false
       }
     ]
@@ -4479,33 +4541,6 @@
       },
       {
         "text": "Không có logo hay tên giải trên áo",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Ukraine muốn Nga ngừng bắn vô điều kiện, chấm dứt xung đột trong năm nay",
-    "content": "Ngoại trưởng Ukraine Andrii Sybiha đã tuyên bố rằng Ukraine mong muốn chấm dứt cuộc xung đột với Nga trong năm nay, với mục tiêu đạt được một nền hòa bình công bằng. Ông nhấn mạnh rằng điều này phụ thuộc vào lập trường của Nga và khẳng định Ukraine không phải là rào cản cho một thỏa thuận hòa bình. Sybiha cũng nêu rõ ba điều kiện cần thiết cho các cuộc đàm phán, bao gồm toàn vẹn lãnh thổ của Ukraine, quyền lựa chọn liên minh và khả năng tự vệ của quân đội Ukraine. Ông bày tỏ hy vọng rằng dưới sự lãnh đạo của Tổng thống Trump, hòa bình có thể đạt được.",
-    "link": "https://dantri.com.vn/the-gioi/ukraine-muon-nga-ngung-ban-vo-dieu-kien-cham-dut-xung-dot-trong-nam-nay-20250318165159956.htm",
-    "cat": "the-gioi",
-    "positivity": 6,
-    "importance": 8,
-    "question": "Ukraine muốn gì để chấm dứt xung đột với Nga?",
-    "answers": [
-      {
-        "text": "Ngừng bắn vô điều kiện",
-        "correct": true
-      },
-      {
-        "text": "Tăng cường quân sự",
-        "correct": false
-      },
-      {
-        "text": "Củng cố vị trí lãnh thổ",
-        "correct": false
-      },
-      {
-        "text": "Thực hiện các biện pháp trừng phạt Nga",
         "correct": false
       }
     ]
