--- a/home.html
+++ b/home.html
@@ -148,6 +148,37 @@
     // Replace this with your actual news data.
     const newsData = [
   {
+    "title": "Việt Nam - Campuchia: Phạm Tuấn Hải đá chính thay Xuân Son, Tiến Linh",
+    "content": "Đội tuyển Việt Nam sẽ đối đầu với Campuchia vào lúc 19h30 hôm nay tại sân Bình Dương, trong khuôn khổ chuẩn bị cho vòng loại cuối Asian Cup 2027. Phạm Tuấn Hải sẽ đá chính thay cho Xuân Son, trong khi Tiến Linh cũng không có mặt trong đội hình xuất phát. Việt Nam đã có thành tích toàn thắng 10 trận liên tiếp trước Campuchia từ năm 1995, và hiện đang trong chuỗi 9 trận bất bại.",
+    "link": "https://vnexpress.net/viet-nam-campuchia-pham-tuan-hai-da-chinh-thay-xuan-son-tien-linh-4863428.html",
+    "cat": "the-thao",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Ai sẽ đá chính thay Xuân Son trong trận Việt Nam gặp Campuchia?",
+    "answers": [
+      {
+        "text": "Phạm Tuấn Hải",
+        "correct": true
+      },
+      {
+        "text": "Nguyễn Xuân Son",
+        "correct": false
+      },
+      {
+        "text": "Tiến Linh",
+        "correct": false
+      },
+      {
+        "text": "Đỗ Duy Mạnh",
+        "correct": false
+      },
+      {
+        "text": "Vũ Văn Thanh",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Quảng Nam yêu cầu truy quét khai thác vàng trái phép mà Tuổi Trẻ phản ánh",
     "content": "Sau khi báo Tuổi Trẻ phản ánh tình trạng khai thác vàng trái phép tại bãi vàng 38 ở Phước Sơn, tỉnh Quảng Nam, lãnh đạo tỉnh đã yêu cầu các lực lượng chức năng tiến hành kiểm tra và truy quét. Ông Phan Thái Bình, phó chủ tịch UBND tỉnh, đã chỉ đạo các cơ quan liên quan phối hợp để xử lý nghiêm các đối tượng vi phạm, đặc biệt là những tổ chức khai thác vàng trái phép. Tình trạng khai thác vàng trái phép diễn ra phức tạp và quy mô lớn, gây ảnh hưởng đến môi trường và trật tự quản lý khoáng sản.",
     "link": "https://tuoitre.vn/quang-nam-yeu-cau-truy-quet-khai-thac-vang-trai-phep-ma-tuoi-tre-phan-anh-20250319171103947.htm",
@@ -268,32 +299,28 @@
     ]
   },
   {
-    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
-    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
-    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
-    "cat": "suc-khoe",
+    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
+    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
+    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
+    "cat": "giai-tri",
     "positivity": 6,
-    "importance": 8,
-    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
+    "importance": 7,
+    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
     "answers": [
       {
-        "text": "Khó thở và ho khan kéo dài",
+        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
         "correct": true
       },
       {
-        "text": "Đau đầu và chóng mặt",
+        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
         "correct": false
       },
       {
-        "text": "Nôn mửa và tiêu chảy",
+        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
         "correct": false
       },
       {
-        "text": "Mệt mỏi và sốt cao",
-        "correct": false
-      },
-      {
-        "text": "Đau bụng và khó tiêu",
+        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
         "correct": false
       }
     ]
@@ -321,33 +348,6 @@
       },
       {
         "text": "Không cần kiểm tra sức khỏe định kỳ.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "\"Mỹ nam không tuổi\" Lee Jun Ki phản hồi thông tin trốn thuế",
-    "content": "Ngày 19/3, Lee Jun Ki phản hồi thông tin bị Cục thuế Quốc gia Hàn Quốc truy thu 900 triệu won (15,8 tỷ đồng) vì nghi vấn trốn thuế. Nam diễn viên khẳng định đã kê khai thu nhập minh bạch và nộp đơn khiếu nại, đồng thời cho biết đã thanh toán toàn bộ số tiền truy thu. Lee Jun Ki cho rằng quyết định của cơ quan thuế không đúng với thông lệ và đã thực hiện nghĩa vụ thuế theo tư vấn từ chuyên gia. Ngoài ra, tài sản bất động sản của anh cũng được chú ý trong bối cảnh này.",
-    "link": "https://dantri.com.vn/giai-tri/my-nam-khong-tuoi-lee-jun-ki-phan-hoi-thong-tin-tron-thue-20250319123742102.htm",
-    "cat": "giai-tri",
-    "positivity": 6,
-    "importance": 7,
-    "question": "Lee Jun Ki phản hồi như thế nào về thông tin trốn thuế?",
-    "answers": [
-      {
-        "text": "Anh đã nộp toàn bộ số tiền truy thu và khiếu nại quyết định của cơ quan thuế.",
-        "correct": true
-      },
-      {
-        "text": "Anh phủ nhận toàn bộ thông tin và không có bất kỳ phản hồi nào.",
-        "correct": false
-      },
-      {
-        "text": "Anh thừa nhận đã trốn thuế và chấp nhận hình phạt.",
-        "correct": false
-      },
-      {
-        "text": "Anh không quan tâm đến thông tin này và tiếp tục sự nghiệp.",
         "correct": false
       }
     ]
@@ -433,6 +433,37 @@
       },
       {
         "text": "Nước lọc",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dấu hiệu nhận biết bệnh xơ phổi",
+    "content": "Bệnh xơ phổi là một tình trạng mạn tính với triệu chứng chính là khó thở, thường tiến triển nặng dần theo thời gian. Người bệnh có thể gặp phải các triệu chứng như ho khan kéo dài, mệt mỏi dù đã nghỉ ngơi, và giảm cân không rõ nguyên nhân. Việc phát hiện sớm và điều trị kịp thời rất quan trọng, vì bệnh có thể dẫn đến tử vong nếu không được chăm sóc đúng cách. Những biện pháp như duy trì lối sống lành mạnh, tuân thủ điều trị và khám sức khỏe định kỳ có thể giúp cải thiện chất lượng sống cho người bệnh xơ phổi.",
+    "link": "https://vnexpress.net/dau-hieu-nhan-biet-benh-xo-phoi-4863292.html",
+    "cat": "suc-khoe",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Bệnh xơ phổi có những triệu chứng nào cần chú ý?",
+    "answers": [
+      {
+        "text": "Khó thở và ho khan kéo dài",
+        "correct": true
+      },
+      {
+        "text": "Đau đầu và chóng mặt",
+        "correct": false
+      },
+      {
+        "text": "Nôn mửa và tiêu chảy",
+        "correct": false
+      },
+      {
+        "text": "Mệt mỏi và sốt cao",
+        "correct": false
+      },
+      {
+        "text": "Đau bụng và khó tiêu",
         "correct": false
       }
     ]
@@ -2336,37 +2367,6 @@
     ]
   },
   {
-    "title": "Dấu hiệu nào ở tay, vai cảnh báo ung thư phổi?",
-    "content": "Ung thư phổi có thể gây ra các triệu chứng hô hấp như ho ra máu và khó thở. Ngoài ra, khi khối u đã lan rộng, nó có thể xuất hiện các dấu hiệu tại tay và vai, như là hiện tượng ngón tay và bả vai bị ảnh hưởng. Điều này cảnh báo người bệnh cần được kiểm tra kịp thời để phát hiện bệnh.",
-    "link": "https://vnexpress.net/dau-hieu-nao-o-tay-vai-canh-bao-ung-thu-phoi-4863116.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Những dấu hiệu nào ở tay và vai có thể cảnh báo ung thư phổi?",
-    "answers": [
-      {
-        "text": "Triệu chứng ngón tay, bả vai bị ảnh hưởng",
-        "correct": true
-      },
-      {
-        "text": "Đau đầu",
-        "correct": false
-      },
-      {
-        "text": "Đau lưng",
-        "correct": false
-      },
-      {
-        "text": "Mệt mỏi",
-        "correct": false
-      },
-      {
-        "text": "Chóng mặt",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "'Mẹ bỉm sữa' giảm 7 kg trong hai tháng",
     "content": "Chị Trang, 30 tuổi, đã giảm 7 kg trong hai tháng sau khi áp dụng chế độ ăn uống và tập luyện theo phác đồ của bác sĩ, thay vì nhịn ăn. Sau khi tăng 22 kg trong thời gian mang thai và gặp khó khăn trong việc giảm cân, chị đã tìm đến Trung tâm Kiểm soát cân nặng và được thiết kế một chế độ ăn đủ dinh dưỡng để đảm bảo chất lượng sữa cho con. Kết quả, chị không chỉ giảm cân mà còn cải thiện sức khỏe tổng thể.",
     "link": "https://vnexpress.net/me-bim-sua-giam-7-kg-trong-hai-thang-4863189.html",
@@ -2393,6 +2393,37 @@
       },
       {
         "text": "6 kg",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Dấu hiệu nào ở tay, vai cảnh báo ung thư phổi?",
+    "content": "Ung thư phổi có thể gây ra các triệu chứng hô hấp như ho ra máu và khó thở. Ngoài ra, khi khối u đã lan rộng, nó có thể xuất hiện các dấu hiệu tại tay và vai, như là hiện tượng ngón tay và bả vai bị ảnh hưởng. Điều này cảnh báo người bệnh cần được kiểm tra kịp thời để phát hiện bệnh.",
+    "link": "https://vnexpress.net/dau-hieu-nao-o-tay-vai-canh-bao-ung-thu-phoi-4863116.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Những dấu hiệu nào ở tay và vai có thể cảnh báo ung thư phổi?",
+    "answers": [
+      {
+        "text": "Triệu chứng ngón tay, bả vai bị ảnh hưởng",
+        "correct": true
+      },
+      {
+        "text": "Đau đầu",
+        "correct": false
+      },
+      {
+        "text": "Đau lưng",
+        "correct": false
+      },
+      {
+        "text": "Mệt mỏi",
+        "correct": false
+      },
+      {
+        "text": "Chóng mặt",
         "correct": false
       }
     ]
