--- a/home_shortnews.html
+++ b/home_shortnews.html
@@ -251,32 +251,63 @@
     ]
   },
   {
-    "title": "Việt Nam - Campuchia: Phạm Tuấn Hải đá chính thay Xuân Son, Tiến Linh",
-    "content": "Đội tuyển Việt Nam sẽ đối đầu với Campuchia vào lúc 19h30 hôm nay tại sân Bình Dương, trong khuôn khổ chuẩn bị cho vòng loại cuối Asian Cup 2027. Phạm Tuấn Hải sẽ đá chính thay cho Xuân Son, trong khi Tiến Linh cũng không có mặt trong đội hình xuất phát. Việt Nam đã có thành tích toàn thắng 10 trận liên tiếp trước Campuchia từ năm 1995, và hiện đang trong chuỗi 9 trận bất bại.",
-    "link": "https://vnexpress.net/viet-nam-campuchia-pham-tuan-hai-da-chinh-thay-xuan-son-tien-linh-4863428.html",
+    "title": "Việt Nam 0-0 Campuchia (H1): Trận đấu bắt đầu",
+    "content": "Trận đấu giữa đội tuyển Việt Nam và Campuchia diễn ra vào lúc 19h30 ngày 19/3/2025 tại sân Bình Dương. Hiện tại, sau 5 phút thi đấu, tỷ số vẫn là 0-0, với Việt Nam kiểm soát bóng tốt hơn nhưng chưa tạo ra cơ hội đáng chú ý nào. Trận đấu này là một phần chuẩn bị cho lượt ra quân gặp Lào tại vòng loại cuối Asian Cup 2027.",
+    "link": "https://vnexpress.net/viet-nam-0-0-campuchia-h1-tran-dau-bat-dau-4863428.html",
     "cat": "the-thao",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Ai sẽ đá chính thay Xuân Son trong trận Việt Nam gặp Campuchia?",
+    "positivity": 6,
+    "importance": 8,
+    "question": "Trận đấu Việt Nam gặp Campuchia diễn ra vào lúc nào?",
     "answers": [
       {
-        "text": "Phạm Tuấn Hải",
+        "text": "19h30",
         "correct": true
       },
       {
-        "text": "Nguyễn Xuân Son",
+        "text": "18h00",
         "correct": false
       },
       {
-        "text": "Tiến Linh",
+        "text": "20h00",
         "correct": false
       },
       {
-        "text": "Đỗ Duy Mạnh",
+        "text": "17h30",
         "correct": false
       },
       {
-        "text": "Vũ Văn Thanh",
+        "text": "21h00",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Phân bổ nguồn lực khoa học công nghệ dựa trên hiệu quả",
+    "content": "Bộ trưởng Khoa học và Công nghệ Nguyễn Mạnh Hùng nhấn mạnh rằng việc phân bổ nguồn lực khoa học công nghệ cần dựa trên hiệu quả, nhằm tăng cường năng lực cạnh tranh quốc gia và đóng góp vào phát triển kinh tế - xã hội. Ông đề xuất rằng các cơ sở nghiên cứu phải được tài trợ dựa trên sự đo lường cụ thể của sự đóng góp vào tăng trưởng GDP. Ngoài ra, Bộ trưởng cũng nhấn mạnh mối liên kết giữa khoa học công nghệ, đổi mới sáng tạo và chuyển đổi số, đồng thời đưa ra các giải pháp đột phá cho từng lĩnh vực.",
+    "link": "https://vnexpress.net/phan-bo-nguon-luc-khoa-hoc-cong-nghe-dua-tren-hieu-qua-4863413.html",
+    "cat": "kinh-doanh",
+    "positivity": 8,
+    "importance": 9,
+    "question": "Phân bổ nguồn lực khoa học công nghệ cần dựa trên tiêu chí gì?",
+    "answers": [
+      {
+        "text": "Hiệu quả",
+        "correct": true
+      },
+      {
+        "text": "Sự phân bố đồng đều",
+        "correct": false
+      },
+      {
+        "text": "Quy mô lớn của dự án",
+        "correct": false
+      },
+      {
+        "text": "Sự nổi bật của tổ chức",
+        "correct": false
+      },
+      {
+        "text": "Tài chính sẵn có",
         "correct": false
       }
     ]
@@ -2018,33 +2049,6 @@
     ]
   },
   {
-    "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
-    "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
-    "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
-    "cat": "kinh-doanh",
-    "positivity": 4,
-    "importance": 7,
-    "question": "Tại sao Audi cắt giảm việc làm ở Đức?",
-    "answers": [
-      {
-        "text": "Do thách thức trong ngành công nghiệp ô tô và nhu cầu chậm lại đối với xe điện.",
-        "correct": true
-      },
-      {
-        "text": "Để tăng cường sản xuất xe điện mới.",
-        "correct": false
-      },
-      {
-        "text": "Vì lý do tài chính cá nhân của nhân viên.",
-        "correct": false
-      },
-      {
-        "text": "Để mở rộng thị trường sang châu Á.",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Đau lưng có phải triệu chứng bệnh thần kinh?",
     "content": "Đau lưng thường được cho là do các vấn đề liên quan đến xương khớp. Tuy nhiên, trong một số trường hợp, tình trạng này có thể là triệu chứng của tổn thương dây thần kinh. Do đó, cần chú ý đến các dấu hiệu và triệu chứng kèm theo để xác định nguyên nhân chính xác hơn.",
     "link": "https://vnexpress.net/dau-lung-co-phai-trieu-chung-benh-than-kinh-4863101.html",
@@ -2067,6 +2071,33 @@
       },
       {
         "text": "Đau lưng chỉ là vấn đề tạm thời.",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "Hãng ô tô Audi cắt giảm hàng nghìn việc làm ở Đức",
+    "content": "Hãng ô tô Audi đã quyết định cắt giảm 7.500 việc làm tại Đức, tương đương 8% lực lượng lao động toàn cầu của hãng, nhằm đối phó với những thách thức trong ngành ô tô hiện nay, bao gồm nhu cầu chậm lại đối với xe điện và sự cạnh tranh gia tăng. Quyết định này dự kiến sẽ được thực hiện vào cuối năm 2029 thông qua các hình thức sa thải tự nguyện và chấm dứt hợp đồng. Chủ tịch Audi cũng nhấn mạnh rằng sẽ không có sa thải bắt buộc cho đến năm 2033, nhằm bảo đảm việc làm cho nhân viên trong bối cảnh kinh tế khó khăn.",
+    "link": "https://tuoitre.vn/hang-o-to-audi-cat-giam-hang-nghin-viec-lam-o-duc-20250318171943316.htm",
+    "cat": "kinh-doanh",
+    "positivity": 4,
+    "importance": 7,
+    "question": "Tại sao Audi cắt giảm việc làm ở Đức?",
+    "answers": [
+      {
+        "text": "Do thách thức trong ngành công nghiệp ô tô và nhu cầu chậm lại đối với xe điện.",
+        "correct": true
+      },
+      {
+        "text": "Để tăng cường sản xuất xe điện mới.",
+        "correct": false
+      },
+      {
+        "text": "Vì lý do tài chính cá nhân của nhân viên.",
+        "correct": false
+      },
+      {
+        "text": "Để mở rộng thị trường sang châu Á.",
         "correct": false
       }
     ]
@@ -2497,37 +2528,6 @@
     ]
   },
   {
-    "title": "'Mẹ bỉm sữa' giảm 7 kg trong hai tháng",
-    "content": "Chị Trang, 30 tuổi, đã giảm 7 kg trong hai tháng sau khi áp dụng chế độ ăn uống và tập luyện theo phác đồ của bác sĩ, thay vì nhịn ăn. Sau khi tăng 22 kg trong thời gian mang thai và gặp khó khăn trong việc giảm cân, chị đã tìm đến Trung tâm Kiểm soát cân nặng và được thiết kế một chế độ ăn đủ dinh dưỡng để đảm bảo chất lượng sữa cho con. Kết quả, chị không chỉ giảm cân mà còn cải thiện sức khỏe tổng thể.",
-    "link": "https://vnexpress.net/me-bim-sua-giam-7-kg-trong-hai-thang-4863189.html",
-    "cat": "suc-khoe",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Chị Trang đã giảm được bao nhiêu kg sau hai tháng điều trị?",
-    "answers": [
-      {
-        "text": "7 kg",
-        "correct": true
-      },
-      {
-        "text": "5 kg",
-        "correct": false
-      },
-      {
-        "text": "10 kg",
-        "correct": false
-      },
-      {
-        "text": "8 kg",
-        "correct": false
-      },
-      {
-        "text": "6 kg",
-        "correct": false
-      }
-    ]
-  },
-  {
     "title": "Dấu hiệu nào ở tay, vai cảnh báo ung thư phổi?",
     "content": "Ung thư phổi có thể gây ra các triệu chứng hô hấp như ho ra máu và khó thở. Ngoài ra, khi khối u đã lan rộng, nó có thể xuất hiện các dấu hiệu tại tay và vai, như là hiện tượng ngón tay và bả vai bị ảnh hưởng. Điều này cảnh báo người bệnh cần được kiểm tra kịp thời để phát hiện bệnh.",
     "link": "https://vnexpress.net/dau-hieu-nao-o-tay-vai-canh-bao-ung-thu-phoi-4863116.html",
@@ -2554,6 +2554,37 @@
       },
       {
         "text": "Chóng mặt",
+        "correct": false
+      }
+    ]
+  },
+  {
+    "title": "'Mẹ bỉm sữa' giảm 7 kg trong hai tháng",
+    "content": "Chị Trang, 30 tuổi, đã giảm 7 kg trong hai tháng sau khi áp dụng chế độ ăn uống và tập luyện theo phác đồ của bác sĩ, thay vì nhịn ăn. Sau khi tăng 22 kg trong thời gian mang thai và gặp khó khăn trong việc giảm cân, chị đã tìm đến Trung tâm Kiểm soát cân nặng và được thiết kế một chế độ ăn đủ dinh dưỡng để đảm bảo chất lượng sữa cho con. Kết quả, chị không chỉ giảm cân mà còn cải thiện sức khỏe tổng thể.",
+    "link": "https://vnexpress.net/me-bim-sua-giam-7-kg-trong-hai-thang-4863189.html",
+    "cat": "suc-khoe",
+    "positivity": 8,
+    "importance": 7,
+    "question": "Chị Trang đã giảm được bao nhiêu kg sau hai tháng điều trị?",
+    "answers": [
+      {
+        "text": "7 kg",
+        "correct": true
+      },
+      {
+        "text": "5 kg",
+        "correct": false
+      },
+      {
+        "text": "10 kg",
+        "correct": false
+      },
+      {
+        "text": "8 kg",
+        "correct": false
+      },
+      {
+        "text": "6 kg",
         "correct": false
       }
     ]
@@ -2899,6 +2930,33 @@
     ]
   },
   {
+    "title": "Chơi tung hứng với bố, bé một tuổi gãy xương đùi",
+    "content": "Trong một vụ tai nạn đáng tiếc, một bé trai một tuổi đã bị gãy xương đùi khi chơi tung hứng với bố. Sau khi nhập viện với tình trạng đau đớn và sợ hãi, bé được bác sĩ tiến hành bó bột toàn thân để ổn định xương gãy. Bác sĩ khuyến cáo rằng các trò chơi mạnh có thể gây hại cho trẻ nhỏ, không chỉ làm gãy xương mà còn ảnh hưởng đến hệ thần kinh của trẻ.",
+    "link": "https://vnexpress.net/choi-tung-hung-voi-bo-be-mot-tuoi-gay-xuong-dui-4862991.html",
+    "cat": "gia-dinh",
+    "positivity": 3,
+    "importance": 7,
+    "question": "Tại sao bé một tuổi bị gãy xương đùi khi chơi tung hứng với bố?",
+    "answers": [
+      {
+        "text": "Bé bị gãy xương do chơi tung hứng với bố.",
+        "correct": true
+      },
+      {
+        "text": "Bé bị ngã trong khi chơi đùa.",
+        "correct": false
+      },
+      {
+        "text": "Bé bị tai nạn khi chạy nhảy.",
+        "correct": false
+      },
+      {
+        "text": "Bé bị va chạm với đồ vật trong nhà.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Trẻ rụng tóc do thiếu chất gì?",
     "content": "Trẻ bị rụng tóc có thể do thiếu hụt nhiều loại vitamin và khoáng chất thiết yếu như vitamin B, C, D, sắt, kẽm và selen trong chế độ dinh dưỡng hàng ngày. Thiếu dinh dưỡng có thể dẫn đến tình trạng tóc rụng nhiều hơn 100 sợi mỗi ngày, tóc yếu và dễ gãy. Bác sĩ Trần Thị Trà Phương đã nhấn mạnh tầm quan trọng của việc bổ sung các chất dinh dưỡng này để giúp tóc phát triển khỏe mạnh và ngăn ngừa rụng tóc ở trẻ em.",
     "link": "https://vnexpress.net/tre-rung-toc-do-thieu-chat-gi-4862999.html",
@@ -2952,33 +3010,6 @@
       },
       {
         "text": "Bệnh xương hóa đá là một chứng bệnh da liễu.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Chơi tung hứng với bố, bé một tuổi gãy xương đùi",
-    "content": "Trong một vụ tai nạn đáng tiếc, một bé trai một tuổi đã bị gãy xương đùi khi chơi tung hứng với bố. Sau khi nhập viện với tình trạng đau đớn và sợ hãi, bé được bác sĩ tiến hành bó bột toàn thân để ổn định xương gãy. Bác sĩ khuyến cáo rằng các trò chơi mạnh có thể gây hại cho trẻ nhỏ, không chỉ làm gãy xương mà còn ảnh hưởng đến hệ thần kinh của trẻ.",
-    "link": "https://vnexpress.net/choi-tung-hung-voi-bo-be-mot-tuoi-gay-xuong-dui-4862991.html",
-    "cat": "gia-dinh",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Tại sao bé một tuổi bị gãy xương đùi khi chơi tung hứng với bố?",
-    "answers": [
-      {
-        "text": "Bé bị gãy xương do chơi tung hứng với bố.",
-        "correct": true
-      },
-      {
-        "text": "Bé bị ngã trong khi chơi đùa.",
-        "correct": false
-      },
-      {
-        "text": "Bé bị tai nạn khi chạy nhảy.",
-        "correct": false
-      },
-      {
-        "text": "Bé bị va chạm với đồ vật trong nhà.",
         "correct": false
       }
     ]
@@ -3432,6 +3463,33 @@
     ]
   },
   {
+    "title": "Bạch cầu tăng gấp 20 lần do ung thư máu nhưng không triệu chứng",
+    "content": "Anh Mạnh, 32 tuổi, đã phát hiện bệnh ung thư máu khi đi khám sức khỏe vì thừa cân. Kết quả xét nghiệm cho thấy lượng bạch cầu của anh tăng gấp 20 lần so với mức bình thường, điều này là dấu hiệu cho thấy bệnh đang tiến triển mà không có triệu chứng rõ ràng. Các bác sĩ đã xác định anh mắc bạch cầu cấp loại M4, một dạng ung thư máu nguy hiểm, và đang tiến hành điều trị tích cực nhằm giảm số lượng bạch cầu và ngăn chặn sự phát triển của tế bào ác tính.",
+    "link": "https://vnexpress.net/bach-cau-tang-gap-20-lan-do-ung-thu-mau-nhung-khong-trieu-chung-4862874.html",
+    "cat": "suc-khoe",
+    "positivity": 3,
+    "importance": 8,
+    "question": "Tại sao bạch cầu của anh Mạnh lại tăng cao đến 20 lần?",
+    "answers": [
+      {
+        "text": "Vì anh Mạnh mắc ung thư máu.",
+        "correct": true
+      },
+      {
+        "text": "Vì anh Mạnh bị nhiễm virus.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh Mạnh ăn uống không điều độ.",
+        "correct": false
+      },
+      {
+        "text": "Vì anh Mạnh thường xuyên tập thể dục.",
+        "correct": false
+      }
+    ]
+  },
+  {
     "title": "Hơn thập kỷ vô sinh do biến chứng đái tháo đường",
     "content": "Anh Tiến, 47 tuổi, đã phải sống với tình trạng vô sinh suốt 12 năm do biến chứng đái tháo đường, dẫn đến rối loạn cương và không có tinh trùng. Sau khi điều trị tại các cơ sở y tế ở Mỹ mà không thành công, anh đã trở về Việt Nam để thực hiện phương pháp thụ tinh ống nghiệm tại IVF Tâm Anh TP HCM. Dù gặp khó khăn trong việc xuất tinh, bác sĩ vẫn tìm ra tinh trùng trong nước tiểu và áp dụng phương pháp TESE để thu tinh trùng cho quá trình thụ tinh ống nghiệm, với kết quả khả quan.",
     "link": "https://vnexpress.net/hon-thap-ky-vo-sinh-do-bien-chung-dai-thao-duong-4862993.html",
@@ -3481,33 +3539,6 @@
       },
       {
         "text": "Bệnh phổi mãn tính",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Bạch cầu tăng gấp 20 lần do ung thư máu nhưng không triệu chứng",
-    "content": "Anh Mạnh, 32 tuổi, đã phát hiện bệnh ung thư máu khi đi khám sức khỏe vì thừa cân. Kết quả xét nghiệm cho thấy lượng bạch cầu của anh tăng gấp 20 lần so với mức bình thường, điều này là dấu hiệu cho thấy bệnh đang tiến triển mà không có triệu chứng rõ ràng. Các bác sĩ đã xác định anh mắc bạch cầu cấp loại M4, một dạng ung thư máu nguy hiểm, và đang tiến hành điều trị tích cực nhằm giảm số lượng bạch cầu và ngăn chặn sự phát triển của tế bào ác tính.",
-    "link": "https://vnexpress.net/bach-cau-tang-gap-20-lan-do-ung-thu-mau-nhung-khong-trieu-chung-4862874.html",
-    "cat": "suc-khoe",
-    "positivity": 3,
-    "importance": 8,
-    "question": "Tại sao bạch cầu của anh Mạnh lại tăng cao đến 20 lần?",
-    "answers": [
-      {
-        "text": "Vì anh Mạnh mắc ung thư máu.",
-        "correct": true
-      },
-      {
-        "text": "Vì anh Mạnh bị nhiễm virus.",
-        "correct": false
-      },
-      {
-        "text": "Vì anh Mạnh ăn uống không điều độ.",
-        "correct": false
-      },
-      {
-        "text": "Vì anh Mạnh thường xuyên tập thể dục.",
         "correct": false
       }
     ]
@@ -4667,64 +4698,6 @@
       },
       {
         "text": "Giải thưởng 'Y tế cộng đồng'",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Vì sao chạy bộ kết hợp du lịch trở thành xu hướng",
-    "content": "Chạy bộ kết hợp du lịch, hay còn gọi là race-cation, đang trở thành xu hướng phổ biến nhờ tính linh hoạt và cơ hội trải nghiệm mới mẻ. Theo báo cáo, số lượng người tham gia các giải chạy toàn cầu tăng 9% trong năm 2024, cho thấy sự phát triển mạnh mẽ của phong trào này. Xu hướng này không chỉ mang lại lợi ích cho vận động viên mà còn tác động tích cực đến ngành du lịch và kinh tế địa phương. Tại Việt Nam, xu hướng này cũng đang được ưa chuộng với nhiều runner kết hợp du lịch khi tham gia các giải marathon.",
-    "link": "https://vnexpress.net/vi-sao-chay-bo-ket-hop-du-lich-tro-thanh-xu-huong-4861830.html",
-    "cat": "du-lich",
-    "positivity": 8,
-    "importance": 7,
-    "question": "Tại sao chạy bộ kết hợp du lịch ngày càng trở thành xu hướng?",
-    "answers": [
-      {
-        "text": "Vì nó mang lại trải nghiệm mới mẻ và lợi ích cho sức khỏe.",
-        "correct": true
-      },
-      {
-        "text": "Vì nó chỉ là một hoạt động thể thao đơn thuần.",
-        "correct": false
-      },
-      {
-        "text": "Vì chạy bộ không ảnh hưởng đến du lịch.",
-        "correct": false
-      },
-      {
-        "text": "Vì không có sự kết hợp nào giữa chạy bộ và du lịch.",
-        "correct": false
-      }
-    ]
-  },
-  {
-    "title": "Đất bị khai thác trái phép 3.500m³ nhưng xã nói 'không biết ai làm'",
-    "content": "Tại xã Ayun Hạ, huyện Phú Thiện, tỉnh Gia Lai, đã phát hiện hoạt động khai thác đất trái phép với khối lượng ước tính lên đến 3.500m³. Mặc dù có dấu hiệu vi phạm rõ ràng, lãnh đạo xã cho biết không xác định được ai là người thực hiện hành vi này. Cơ quan chức năng đã tiến hành kiểm tra và lập biên bản, nhưng chưa có kết luận rõ ràng về đối tượng vi phạm, dẫn đến việc yêu cầu huyện Phú Thiện phối hợp xử lý vụ việc.",
-    "link": "https://tuoitre.vn/dat-bi-khai-thac-trai-phep-3-500m3-nhung-xa-noi-khong-biet-ai-lam-20250318191021284.htm",
-    "cat": "phap-luat",
-    "positivity": 3,
-    "importance": 7,
-    "question": "Ai là người khai thác đất trái phép tại xã Ayun Hạ?",
-    "answers": [
-      {
-        "text": "Chưa xác định được ai",
-        "correct": true
-      },
-      {
-        "text": "Một cá nhân địa phương",
-        "correct": false
-      },
-      {
-        "text": "Một công ty xây dựng",
-        "correct": false
-      },
-      {
-        "text": "Một nhóm thanh niên",
-        "correct": false
-      },
-      {
-        "text": "Người dân trong xã",
         "correct": false
       }
     ]
